--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <main>
-    <section class="section1">
+    <!-- En la seccion 1 genero el tabblero del juego -->
+    <section class="section1"> 
       <h1>pon a prueba tu memoria</h1>
       <table>
         <tr>
@@ -35,6 +36,7 @@
         </tr>
       </table>
     </section>
+    <!-- En la Seccion 2 genero los datos estadisticos del particiante -->
     <section class="section2">
       <h2 id="aciertos" class="estadisticas">Aciertos: 0</h2>
       <h2 id="t-restante" class="estadisticas">Tiempo: 60</h2>
